FIX: correct colour of links in Header overflow dropdown menu [t20987]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@13692 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -27,6 +27,9 @@ input[readonly] {
 #Header a:hover,
 #Header .current {opacity:1;text-decoration: none}
 #Header li.UploadButton a {color: white;}
+/* links in Header overflow dropdown menu */
+li.HeaderLink a {color:#fff !important; opacity:0.7;}
+
 
 /* Colours for $header_text_title */
 #TextHeader, #TextHeader a, #TextDesc {color:#fff;}
